--- a/accessibility-guide.html
+++ b/accessibility-guide.html
@@ -14,7 +14,7 @@
     <title>Access Granted | Accessibility Guide </title>
 </head>
 
-<body>
+<body class="">
 	<a href="#main-content" class="skip-link">Skip to main content</a>
 	<header class="fixed-top">
 		<nav class="navbar navbar-expand-lg">
@@ -47,6 +47,82 @@
 		  </div>
 		</nav>
 	  </header>
+
+	  <!-- Canvas sidebar -->
+  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+  aria-labelledby="offcanvasWithBothOptionsLabel">
+  <div class="offcanvas-header">
+	<h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
+	<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+	<ul class="list-unstyled p-3" aria-labelledby="navbarDropdown">
+	  <li class="mb-3">
+		<div class="dropdown-item">
+		  <label class="form-label">Font Size</label>
+		  <div class="d-flex flex-column">
+			<div class="btn-group" role="group" aria-label="Font Size">
+			  <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small"
+				autocomplete="off">
+			  <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
+
+			  <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
+				value="medium" autocomplete="off" checked>
+			  <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
+
+			  <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large"
+				autocomplete="off">
+			  <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
+			</div>
+		  </div>
+		</div>
+	  </li>
+	  <li class="mb-3">
+		<div class="dropdown-item">
+		  <div class="form-check form-switch form-switch-lg d-flex align-items-center">
+			<input class="form-check-input font-switch" type="checkbox" id="fontSwitch1" aria-label="Font switch">
+			<label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
+		  </div>
+		</div>
+	  </li>
+	  <li class="mb-3">
+		<div class="dropdown-item">
+		  <div class="form-check form-switch form-switch-lg d-flex align-items-center">
+			<input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
+			<label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast Mode</label>
+		  </div>
+		</div>
+	  </li>
+	  <li class="mb-3">
+		<div class="dropdown-item">
+		  <label class="form-label">Colorblind Mode</label>
+		  <div class="d-flex flex-column">
+			<div class="btn-group-vertical w-100" role="group" aria-label="Colorblind Mode">
+			  <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="normalVision" value=""
+				autocomplete="off" checked>
+			  <label class="btn btn-outline-secondary" for="normalVision">Normal Vision</label>
+
+			  <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="deuteranopia"
+				value="deuteranopia" autocomplete="off">
+			  <label class="btn btn-outline-secondary" for="deuteranopia">Deuteranopia</label>
+
+			  <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="protanopia"
+				value="protanopia" autocomplete="off">
+			  <label class="btn btn-outline-secondary" for="protanopia">Protanopia</label>
+
+			  <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="tritanopia"
+				value="tritanopia" autocomplete="off">
+			  <label class="btn btn-outline-secondary" for="tritanopia">Tritanopia</label>
+			</div>
+		  </div>
+		</div>
+	  </li>
+	  <li class="mb-3">
+		<a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility Guide</a>
+	  </li>
+	</ul>
+  </div>
+</div>
 
 	<main id="main-content" class="container my-5">
 		<h1 class="mb-4">Accessibility Guide</h1>
@@ -166,8 +242,16 @@
 		</defs>
 	  </svg>
 
+	<!-- Fontawesome icons -->
+	<script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
+	<!-- Bootstrap Bundle with Popper -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<!-- Custom Script -->
 	<script src="assets/js/script.js"></script>
+	<!-- Theme Switcher Script -->
+	<script src="assets/js/theme-switcher.js"></script>
+	<!-- Toggle navigation bar background -->
+	<script src="assets/js/navbar-background-toggler.js"></script>
 </body>
 
 </html>
