changed the thank you message

--- a/thank-you.html
+++ b/thank-you.html
@@ -131,7 +131,8 @@
 		<div class="row justify-content-center">
 			<div class="col-md-8 text-center">
 				<h1 class="display-4 mb-4">Thank You!</h1>
-				<p class="lead mb-5">We've received your message and will get back to you as soon as possible.</p>
+				<p class="lead mb-5">Thank you for reaching out! Your message is important to us, and we’re committed to responding as quickly as possible. Together, let’s make accessibility a priority for everyone.</p>
+
 				<a href="index.html" class="btn btn-primary btn-lg">Return to Home</a>
 			</div>
 		</div>
