Delete the word mode if nessecary for text length

--- a/resources.html
+++ b/resources.html
@@ -92,7 +92,7 @@
           <div class="dropdown-item">
             <div class="form-check form-switch form-switch-lg d-flex align-items-center">
               <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-              <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast Mode</label>
+              <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
             </div>
           </div>
         </li>
@@ -252,7 +252,7 @@
               <div class="form-check form-switch form-switch-lg d-flex align-items-center justify-content-center">
                 <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2"
                   aria-label="Theme switch">
-                <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
+                <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast</label>
               </div>
             </div>
           </div>
