--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 </head>
 <body class="relative">
     <a href="#main-content" class="skip-link">Skip to main content</a>
-    
+
     <header class="fixed-top">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -90,7 +90,7 @@
         <div class="dropdown-item">
           <div class="form-check form-switch form-switch-lg d-flex align-items-center">
             <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-            <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast Mode</label>
+            <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
           </div>
         </div>
       </li>
@@ -168,7 +168,7 @@
         <p class="mb-1">&copy; 2024 Access Granted Project</p>
       </div>
       </footer>
-  
+
     <svg class="svg-filter">
       <defs>
         <filter id="deuteranopia-filter">
