--- a/thank-you.html
+++ b/thank-you.html
@@ -92,7 +92,7 @@
 		<div class="dropdown-item">
 		  <div class="form-check form-switch form-switch-lg d-flex align-items-center">
 			<input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-			<label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast Mode</label>
+			<label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
 		  </div>
 		</div>
 	  </li>
