Add back the back to top button

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
     </div>
   </div>
 
+  <!-- Back to top button -->
+  <a href="#" class="back-to-top position-fixed bottom-0 end-0 m-3 d-none">
+    <button class="btn btn-primary btn-lg" aria-label="Back to Top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+  </a>
+
   <main id="main-content">
     <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center"
       style="height: 80vh;">
