Decrease shadow sizes and add transparent images

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <div class="container mt-5">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/microphone-icon.webp" class="card-img-top" alt="Feature 1 illustration">
+            <div class="card h-100 shadow border-0 bg-feature-card">
+              <img src="assets/images/microphone-iconNoBG.webp" class="card-img-top" alt="Feature 1 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
@@ -172,8 +172,8 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/glasses-icon.webp" class="card-img-top" alt="Feature 2 illustration">
+            <div class="card h-100 shadow border-0 bg-feature-card">
+              <img src="assets/images/glasses-iconNoBG.webp" class="card-img-top" alt="Feature 2 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
@@ -195,8 +195,8 @@
             </div>
           </div>
           <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/contrast-icon.webp" class="card-img-top" alt="Feature 3 illustration">
+            <div class="card h-100 shadow border-0 bg-feature-card">
+              <img src="assets/images/contrast-iconNoBG.webp" class="card-img-top" alt="Feature 3 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div class="mb-3">
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
