--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="card h-100 shadow border-0 bg-feature-card">
               <img src="assets/images/glasses-iconNoBG.webp" class="card-img-top" alt="Feature 2 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
+                <div class="mb-3">
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
                   <h6 class="card-subtitle mb-2 text-muted">Say Hi to Glassy with the Glasses!</h6>
                   <p class="card-text text-body">Enhance readability with the OpenDyslexic font, guided by Glassy with
