Remove another unnessecary "mode" word

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="description"
+    content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
   <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
   <!-- Link head tags -->
   <link rel='shortcut icon' href="assets/images/logo.webp">
@@ -209,7 +210,7 @@
                   <div class="form-check form-switch form-switch-md d-flex">
                     <input class="form-check-input theme-switch mt-0" type="checkbox" id="themeSwitch2"
                       aria-label="Theme switch">
-                    <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast Mode</label>
+                    <label class="form-check-label ms-2 text-body" for="themeSwitch2">Turn on High Contrast</label>
                   </div>
                   <a href="resources.html#high-contrast" class="btn btn-sm btn-primary"><i
                       class="fas fa-info-circle"></i> Learn More</a>
