--- a/voice.html
+++ b/voice.html
@@ -173,7 +173,11 @@
     <div id="standby-indicator" style="display:none; color: red; font-size: 20px;">
         Help Buddy is in standby mode.
     </div>
-
+    <div class="brief-me-container" style="margin-top: 20px;">
+        <button id="brief-me-btn" class="brief-me-btn" style="font-size: 18px; padding: 10px 20px; cursor: pointer; background-color: #007bff; color: white; border: none; border-radius: 5px;">
+            Brief Me
+        </button>
+    </div>
     <div id="calendar-container">
         <div class="calendar-header">
             <button id="prev-month">←</button>
