--- a/index.html
+++ b/index.html
@@ -95,43 +95,14 @@
             </div>
           </div>
         </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <label class="form-label">Colorblind Mode</label>
-            <div class="d-flex flex-column">
-              <div class="btn-group-vertical w-100" role="group" aria-label="Colorblind Mode">
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="normalVision" value=""
-                  autocomplete="off" checked>
-                <label class="btn btn-outline-secondary" for="normalVision">Normal Vision</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="deuteranopia"
-                  value="deuteranopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="deuteranopia">Deuteranopia</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="protanopia"
-                  value="protanopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="protanopia">Protanopia</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="tritanopia"
-                  value="tritanopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="tritanopia">Tritanopia</label>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility Guide</a>
-        </li>
       </ul>
     </div>
   </div>
 
   <!-- Back to top button -->
-  <a href="#" class="back-to-top position-fixed bottom-0 end-0 m-3 d-none">
-    <button class="btn btn-primary btn-lg" aria-label="Back to Top">
+  <button class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none" aria-label="Back to Top">
       <i class="fas fa-arrow-up"></i>
     </button>
-  </a>
 
   <main id="main-content">
     <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center"
@@ -263,22 +234,6 @@
     </div>
   </footer>
 
-  <svg class="svg-filter">
-    <defs>
-      <filter id="deuteranopia-filter">
-        <feColorMatrix type="matrix"
-          values="0.625, 0.375, 0, 0, 0, 0.7, 0.3, 0, 0, 0, 0, 0.3, 0.7, 0, 0, 0, 0, 0, 1, 0" />
-      </filter>
-      <filter id="protanopia-filter">
-        <feColorMatrix type="matrix"
-          values="0.567, 0.433, 0, 0, 0, 0.558, 0.442, 0, 0, 0, 0, 0.242, 0.758, 0, 0, 0, 0, 0, 1, 0" />
-      </filter>
-      <filter id="tritanopia-filter">
-        <feColorMatrix type="matrix"
-          values="0.95, 0.05, 0, 0, 0, 0, 0.433, 0.567, 0, 0, 0, 0.475, 0.525, 0, 0, 0, 0, 0, 1, 0" />
-      </filter>
-    </defs>
-  </svg>
   <!-- Fontawesome icons -->
   <script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Bundle with Popper -->
