--- a/index.html
+++ b/index.html
@@ -58,22 +58,20 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <ul class="list-unstyled p-3" aria-labelledby="navbarDropdown">
+      <ul class="list-unstyled p-3">
         <li class="mb-3">
           <div class="dropdown-item">
             <label class="form-label">Font Size</label>
             <div class="d-flex flex-column">
               <div class="btn-group" role="group" aria-label="Font Size">
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small"
-                  autocomplete="off">
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small">
                 <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
 
                 <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
-                  value="medium" autocomplete="off" checked>
+                  value="medium" checked>
                 <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
 
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large"
-                  autocomplete="off">
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large">
                 <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
               </div>
             </div>
@@ -101,8 +99,8 @@
 
   <!-- Back to top button -->
   <button class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none" aria-label="Back to Top">
-      <i class="fas fa-arrow-up"></i>
-    </button>
+    <i class="fas fa-arrow-up"></i>
+  </button>
 
   <main id="main-content">
     <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center"
@@ -116,7 +114,8 @@
           </p>
         </div>
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img src="assets/images/locky.webp" alt="" srcset="" class="img-fluid" height="400" width="400">
+          <img src="assets/images/locky.webp" alt="A cute lock character simulating access for all"
+            class="img-fluid" height="400" width="400">
         </div>
       </div>
     </section>
