--- a/resources.html
+++ b/resources.html
@@ -59,22 +59,20 @@
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      <ul class="list-unstyled p-3" aria-labelledby="navbarDropdown">
+      <ul class="list-unstyled p-3">
         <li class="mb-3">
           <div class="dropdown-item">
             <label class="form-label">Font Size</label>
             <div class="d-flex flex-column">
               <div class="btn-group" role="group" aria-label="Font Size">
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small"
-                  autocomplete="off">
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small">
                 <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
 
                 <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
-                  value="medium" autocomplete="off" checked>
+                  value="medium" checked>
                 <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
 
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large"
-                  autocomplete="off">
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large">
                 <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
               </div>
             </div>
@@ -95,33 +93,6 @@
               <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
             </div>
           </div>
-        </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <label class="form-label">Colorblind Mode</label>
-            <div class="d-flex flex-column">
-              <div class="btn-group-vertical w-100" role="group" aria-label="Colorblind Mode">
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="normalVision" value=""
-                  autocomplete="off" checked>
-                <label class="btn btn-outline-secondary" for="normalVision">Normal Vision</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="deuteranopia"
-                  value="deuteranopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="deuteranopia">Deuteranopia</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="protanopia"
-                  value="protanopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="protanopia">Protanopia</label>
-
-                <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="tritanopia"
-                  value="tritanopia" autocomplete="off">
-                <label class="btn btn-outline-secondary" for="tritanopia">Tritanopia</label>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility Guide</a>
         </li>
       </ul>
     </div>
