--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
 						<input type="checkbox" class="form-check-input" id="privacyCheck" required>
 						<label class="form-check-label" for="privacyCheck">
 							I have read and agree to the <a href="https://www.termsfeed.com/live/7364ab41-d9ad-459e-a730-f1882e830984"
-								target="_blank">privacy policy</a>
+								target="_blank" rel="noopener">privacy policy</a>
 						</label>
 					</div>
 					<button type="submit" class="btn btn-primary">Send Message</button>
