--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<title>Access Granted | Contact Us</title>
 	<!-- Script from previous head iteration, Not sure if it should be here or at bottom of the page..  -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 	</script>
   </head>
 
