Fix spelling errors in meta tags

--- a/404.html
+++ b/404.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Error 404 page.">
-	  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
-    <!-- Link head tags -->
-    <link rel='shortcut icon' href="assets/images/logo.webp">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Left out CSS stylesheet link as 404.css stylesheet is linked below -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Access Granted | 404 - Page Not Found </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
+  <!-- Link head tags -->
+  <link rel='shortcut icon' href="assets/images/logo.webp">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Left out CSS stylesheet link as 404.css stylesheet is linked below -->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Access Granted | 404 - Page Not Found </title>
 
 </head>
 
@@ -97,67 +99,68 @@
     </div>
   </div>
 
-    <main id="main-content" class="container my-5 main-background">
-        <div class="row justify-content-center">
-            <div class="col-md-8 text-center error-background">
-                <h1 class="display-1 error-h1 mt-5">404</h1>
-                <h2 class="mb-4 error-h2"><strong>Oops! Access NOT Granted</strong></h2>
-                <p class="lead mb-5 error-paragraph"><strong>We couldn't find the page you're looking for. It might have been moved or doesn't exist.</strong></p>
-                <a href="index.html " class="btn btn-primary btn-lg error-button">Return to Home</a>
+  <main id="main-content" class="container my-5 main-background">
+    <div class="row justify-content-center">
+      <div class="col-md-8 text-center error-background">
+        <h1 class="display-1 error-h1 mt-5">404</h1>
+        <h2 class="mb-4 error-h2"><strong>Oops! Access NOT Granted</strong></h2>
+        <p class="lead mb-5 error-paragraph"><strong>We couldn't find the page you're looking for. It might have been
+            moved or doesn't exist.</strong></p>
+        <a href="index.html " class="btn btn-primary btn-lg error-button">Return to Home</a>
 
-            </div>
-        </div>
-    </main>
-
-    <hr>
-
-    <footer class="text-muted py-5">
-      <div class="container footerdiv">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>Social</h5>
-            <ul class="list-unstyled">
-              <li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
-                  rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)" aria-hidden="true"><i
-                    class="fa-brands fa-github"></i> Github</a></li>
-              <li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted" target="_blank"
-                  rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)" aria-hidden="true"><i
-                    class="fa-brands fa-slack"></i> Slack</a></li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h5>Site Map</h5>
-            <ul class="list-unstyled">
-              <li><a href="index.html" class="text-muted">Home</a></li>
-              <li><a href="accessibility-guide.html" class="text-muted">Accessibility guide</a></li>
-              <li><a href="resources.html" class="text-muted">Resources</a></li>
-              <li><a href="about.html" class="text-muted">About</a></li>
-              <li><a href="contact.html" class="text-muted">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-        <p class="mb-1">&copy; 2024 Access Granted Project</p>
       </div>
-    </footer>
-  
-    <svg class="svg-filter">
-      <defs>
-        <filter id="deuteranopia-filter">
-          <feColorMatrix type="matrix"
-            values="0.625, 0.375, 0, 0, 0, 0.7, 0.3, 0, 0, 0, 0, 0.3, 0.7, 0, 0, 0, 0, 0, 1, 0" />
-        </filter>
-        <filter id="protanopia-filter">
-          <feColorMatrix type="matrix"
-            values="0.567, 0.433, 0, 0, 0, 0.558, 0.442, 0, 0, 0, 0, 0.242, 0.758, 0, 0, 0, 0, 0, 1, 0" />
-        </filter>
-        <filter id="tritanopia-filter">
-          <feColorMatrix type="matrix"
-            values="0.95, 0.05, 0, 0, 0, 0, 0.433, 0.567, 0, 0, 0, 0.475, 0.525, 0, 0, 0, 0, 0, 1, 0" />
-        </filter>
-      </defs>
-    </svg>
+    </div>
+  </main>
 
-    <!-- Fontawesome icons -->
+  <hr>
+
+  <footer class="text-muted py-5">
+    <div class="container footerdiv">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>Social</h5>
+          <ul class="list-unstyled">
+            <li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
+                rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)" aria-hidden="true"><i
+                  class="fa-brands fa-github"></i> Github</a></li>
+            <li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted" target="_blank"
+                rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)" aria-hidden="true"><i
+                  class="fa-brands fa-slack"></i> Slack</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Site Map</h5>
+          <ul class="list-unstyled">
+            <li><a href="index.html" class="text-muted">Home</a></li>
+            <li><a href="accessibility-guide.html" class="text-muted">Accessibility guide</a></li>
+            <li><a href="resources.html" class="text-muted">Resources</a></li>
+            <li><a href="about.html" class="text-muted">About</a></li>
+            <li><a href="contact.html" class="text-muted">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="mb-1">&copy; 2024 Access Granted Project</p>
+    </div>
+  </footer>
+
+  <svg class="svg-filter">
+    <defs>
+      <filter id="deuteranopia-filter">
+        <feColorMatrix type="matrix"
+          values="0.625, 0.375, 0, 0, 0, 0.7, 0.3, 0, 0, 0, 0, 0.3, 0.7, 0, 0, 0, 0, 0, 1, 0" />
+      </filter>
+      <filter id="protanopia-filter">
+        <feColorMatrix type="matrix"
+          values="0.567, 0.433, 0, 0, 0, 0.558, 0.442, 0, 0, 0, 0, 0.242, 0.758, 0, 0, 0, 0, 0, 1, 0" />
+      </filter>
+      <filter id="tritanopia-filter">
+        <feColorMatrix type="matrix"
+          values="0.95, 0.05, 0, 0, 0, 0, 0.433, 0.567, 0, 0, 0, 0.475, 0.525, 0, 0, 0, 0, 0, 1, 0" />
+      </filter>
+    </defs>
+  </svg>
+
+  <!-- Fontawesome icons -->
   <script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -168,4 +171,5 @@
   <!-- Toggle navigation bar background -->
   <script src="assets/js/navbar-background-toggler.js"></script>
 </body>
+
 </html>
