--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
-  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+    content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
   <!-- Link head tags -->
   <link rel='shortcut icon' href="assets/images/logo.webp">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -103,8 +103,7 @@
   </button>
 
   <main id="main-content">
-    <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center"
-      style="height: 80vh;">
+    <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center">
       <div class="row w-100 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1>Welcome to Access Granted</h1>
@@ -114,8 +113,8 @@
           </p>
         </div>
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img src="assets/images/locky.webp" alt="A cute lock character simulating access for all"
-            class="img-fluid" height="400" width="400">
+          <img src="assets/images/locky.webp" alt="A cute lock character simulating access for all" class="img-fluid"
+            height="400" width="400">
         </div>
       </div>
     </section>
