--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		content="Explore access granted's accessibility, inclusivity and availability for all. Access a wide range of different functions for accessibility">
-	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+		content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+	<meta name="keywords"
+		content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
 	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -133,7 +134,7 @@
 								<img src="assets/images/avatars/Vernell.webp" class="card-img-top" alt="Vernell Clark">
 								<div class="card-body">
 									<h5 class="card-title">Vernell Clark</h5>
-									<p class="card-text">SCRUM Leader</p>
+									<p class="card-text">SCRUM Lead</p>
 								</div>
 							</div>
 							<div class="flip-card-back">
