--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. Get into contact with us now!">
-	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all, contact">
+	<meta name="description"
+    content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
 	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
