--- a/resources.html
+++ b/resources.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore access granted's accessibility, inclusivity and availability for all. See our website resources here!">
-  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+  <meta name="description"
+    content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
   <!-- Link head tags -->
-	<link rel='shortcut icon' href="assets/images/logo.webp">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/style.css">
+  <link rel='shortcut icon' href="assets/images/logo.webp">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Access Granted | Resources</title>
 </head>
 
@@ -145,7 +146,8 @@
                 tailored to your needs.</li>
             </ul>
             <h4>Why It Matters:</h4>
-            <p id="dyslexia">For many of us, using a mouse or keyboard is second nature, but those with visual impairments or mobility
+            <p id="dyslexia">For many of us, using a mouse or keyboard is second nature, but those with visual
+              impairments or mobility
               issues face significant barriers. Mikey's voice commands provide an essential alternative, transforming
               how these users interact with digital content and ensuring they can access information just as easily as
               everyone else.</p>
@@ -199,7 +201,8 @@
               <span>
                 If you want to find out more, go to
               </span>
-              <a id="high-contrast" href="https://opendyslexic.org/" target="_blank" rel="noopener noreferrer">opendyslexic.org</a>
+              <a id="high-contrast" href="https://opendyslexic.org/" target="_blank"
+                rel="noopener noreferrer">opendyslexic.org</a>
             </p>
           </div>
         </div>
