--- a/thank-you.html
+++ b/thank-you.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		content="Explore access granted's accessibility, inclusivity and availability for all. Thank you for your message">
-	<meta name="keywords" content="Accessible, accessibility, inclusive, inclusivity, for everyone, a website for all">
+		content="Explore access granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+	<meta name="keywords"
+		content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
 	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,89 +22,94 @@
 
 	<header class="fixed-top">
 		<nav class="navbar navbar-expand-lg">
-		  <div class="container">
-			<a class="navbar-brand" href="index.html">
-			  <img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
-				class="d-inline-block align-top">
-			  Access Granted
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-			  aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarContent">
-			  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-				<li class="nav-item mt-2">
-				  <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
-				</li>
-				<li class="nav-item mt-2">
-				  <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-				</li>
-				<li class="nav-item mt-2">
-				  <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-				</li>
-				<li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
-					data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
-					  class="fas fa-universal-access"></i> Accessibility</button></li>
-			  </ul>
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
+						class="d-inline-block align-top">
+					Access Granted
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+					aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item mt-2">
+							<a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
+						</li>
+						<li class="nav-item mt-2">
+							<a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+						</li>
+						<li class="nav-item mt-2">
+							<a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+						</li>
+						<li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
+								data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+									class="fas fa-universal-access"></i> Accessibility</button></li>
+					</ul>
+				</div>
 			</div>
-		  </div>
 		</nav>
-	  </header>
+	</header>
 
-  <!-- Canvas sidebar -->
-  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-    aria-labelledby="offcanvasWithBothOptionsLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-      <ul class="list-unstyled p-3">
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <label class="form-label">Font Size</label>
-            <div class="d-flex flex-column">
-              <div class="btn-group" role="group" aria-label="Font Size">
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small">
-                <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
+	<!-- Canvas sidebar -->
+	<div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+		aria-labelledby="offcanvasWithBothOptionsLabel">
+		<div class="offcanvas-header">
+			<h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
+			<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+		</div>
+		<div class="offcanvas-body">
+			<ul class="list-unstyled p-3">
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<label class="form-label">Font Size</label>
+						<div class="d-flex flex-column">
+							<div class="btn-group" role="group" aria-label="Font Size">
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeSmall" value="small">
+								<label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
 
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
-                  value="medium" checked>
-                <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeMedium" value="medium" checked>
+								<label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
 
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large">
-                <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-              <input class="form-check-input font-switch" type="checkbox" id="fontSwitch1" aria-label="Font switch">
-              <label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-              <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-              <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeLarge" value="large">
+								<label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<div class="form-check form-switch form-switch-lg d-flex align-items-center">
+							<input class="form-check-input font-switch" type="checkbox" id="fontSwitch1"
+								aria-label="Font switch">
+							<label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
+						</div>
+					</div>
+				</li>
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<div class="form-check form-switch form-switch-lg d-flex align-items-center">
+							<input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1"
+								aria-label="Theme switch">
+							<label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
 
 
 	<main id="main-content" class="container my-5 main-background ">
 		<div class="row justify-content-center">
 			<div class="col-md-8 text-center">
 				<h1 class="display-4 mt-5 mb-4">Thank You!</h1>
-				<p class="lead mb-5">Thank you for reaching out! Your message is important to us, and we’re committed to responding as quickly as possible. Together, let’s make accessibility a priority for everyone.</p>
+				<p class="lead mb-5">Thank you for reaching out! Your message is important to us, and we’re committed to
+					responding as quickly as possible. Together, let’s make accessibility a priority for everyone.</p>
 
 				<a href="index.html" class="btn btn-primary btn-lg">Return to Home</a>
 			</div>
@@ -114,31 +120,31 @@
 
 	<footer class="text-muted py-5">
 		<div class="container footerdiv">
-		  <div class="row">
-			<div class="col-md-4">
-			  <h5>Social</h5>
-			  <ul class="list-unstyled">
-				<li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
-					rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)" aria-hidden="true"><i
-					  class="fa-brands fa-github"></i> Github</a></li>
-				<li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted" target="_blank"
-					rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)" aria-hidden="true"><i
-					  class="fa-brands fa-slack"></i> Slack</a></li>
-			  </ul>
+			<div class="row">
+				<div class="col-md-4">
+					<h5>Social</h5>
+					<ul class="list-unstyled">
+						<li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
+								rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)"
+								aria-hidden="true"><i class="fa-brands fa-github"></i> Github</a></li>
+						<li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted"
+								target="_blank" rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)"
+								aria-hidden="true"><i class="fa-brands fa-slack"></i> Slack</a></li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h5>Site Map</h5>
+					<ul class="list-unstyled">
+						<li><a href="index.html" class="text-muted">Home</a></li>
+						<li><a href="resources.html" class="text-muted">Resources</a></li>
+						<li><a href="about.html" class="text-muted">About</a></li>
+						<li><a href="contact.html" class="text-muted">Contact</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-4">
-			  <h5>Site Map</h5>
-			  <ul class="list-unstyled">
-				<li><a href="index.html" class="text-muted">Home</a></li>
-				<li><a href="resources.html" class="text-muted">Resources</a></li>
-				<li><a href="about.html" class="text-muted">About</a></li>
-				<li><a href="contact.html" class="text-muted">Contact</a></li>
-			  </ul>
-			</div>
-		  </div>
-		  <p class="mb-1">&copy; 2024 Access Granted Project</p>
+			<p class="mb-1">&copy; 2024 Access Granted Project</p>
 		</div>
-	  </footer>
+	</footer>
 
 	<!-- Fontawesome icons -->
 	<script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
