Add back to top button to all pages

--- a/about.html
+++ b/about.html
@@ -102,6 +102,10 @@
 		</div>
 	</div>
 
+  <!-- Back to top button -->
+  <a href="#" class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none z-3" aria-label="Back to Top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
 
 	<main class="container my-5">
 		<section>
