--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
   </div>
 
   <!-- Back to top button -->
-  <button class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none" aria-label="Back to Top">
+  <a href="#" class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none z-3" aria-label="Back to Top">
     <i class="fas fa-arrow-up"></i>
-  </button>
+  </a>
 
   <main id="main-content">
     <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center">
