--- a/404.html
+++ b/404.html
@@ -99,6 +99,11 @@
     </div>
   </div>
 
+  <!-- Back to top button -->
+  <a href="#" class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none z-3" aria-label="Back to Top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+
   <main id="main-content" class="container my-5 main-background">
     <div class="row justify-content-center">
       <div class="col-md-8 text-center error-background">
