--- a/contact.html
+++ b/contact.html
@@ -109,6 +109,11 @@
 		</div>
 	</div>
 
+  <!-- Back to top button -->
+  <a href="#" class="btn btn-primary btn-lg back-to-top position-fixed bottom-0 end-0 m-3 d-none z-3" aria-label="Back to Top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
+
 	<main id="main-content" class="container-fluid mb-5 pt-5 h-75 main-background d-flex flex-column justify-content-center">
 	  <div class="container mt-5">
 		<h1 class="my-5 text-center">Contact Us</h1>
