reformat thank you page

--- a/thank-you.html
+++ b/thank-you.html
@@ -108,14 +108,23 @@
     <i class="fas fa-arrow-up"></i>
   </a>
 
-	<main id="main-content" class="container my-5 main-background ">
-		<div class="row justify-content-center">
-			<div class="col-md-8 text-center">
-				<h1 class="display-4 mt-5 mb-4">Thank You!</h1>
-				<p class="lead mb-5">Thank you for reaching out! Your message is important to us, and we’re committed to
-					responding as quickly as possible. Together, let’s make accessibility a priority for everyone.</p>
-
-				<a href="index.html" class="btn btn-primary btn-lg">Return to Home</a>
+	<main id="main-content"
+		class="container-fluid mb-5 pt-5 h-75 main-background d-flex flex-column justify-content-center">
+		<div class="container mt-5">
+			<h1 class="my-5 text-center">Thank You</h1>
+			<div class="row">
+				<div class="col-md-6 mb-4">
+					<form id="contact-form" class="bg-feature-card p-4 rounded shadow-sm">
+					
+					</form>
+				</div>
+				<div class="col-md-6 mb-4">
+					<div class="card bg-feature-card p-4 rounded shadow-sm">
+						<div class="card-body get-in-touch-card">
+						
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</main>
